--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Daniel Jung
 
 # Short bio or description (displayed in the header)
-description: Student at Northeastern
+description: Student @ Northeastern
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -21,12 +21,12 @@ footer-links:
   email: jung.d@northeastern.edu
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: djung335
   instagram: tekyung_
-  linkedin:
+  linkedin: djung335
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: # username
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
